Closed Bug 253818 Opened 21 years ago Closed 21 years ago

seeing tons of "RootScrollFrame is not scrollable?"

Categories

(Core :: Web Painting, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bugzilla, Assigned: roc)

References

()

Details

Attachments

(1 file)

when browsing sites with my debug build I'm seeing tons of: RootScrollFrame is not scrollable? assertions is it really a bug and how can I help in getting rid of this debug alert.
happens on linux too. ###!!! ASSERTION: RootScrollFrame is not scrollable?: 'scrollableFrame', file /home/chb/mozilla/layout/html/base/src/nsPresShell.cpp, line 3609 Break: at file /home/chb/mozilla/layout/html/base/src/nsPresShell.cpp, line 3609 random example url http://movies.go.com/trailers/index.html, but happens on many many pages.
OS: Windows XP → All
OS X too.
Hardware: PC → All
Can we please do something about this assertion? It makes debugging with XPCOM_DEBUG_BREAK quite painful.
Let's just take it out. Someone post a patch and I'll review it
Attachment #162708 - Flags: superreview?(roc)
Attachment #162708 - Flags: superreview+
Attachment #162708 - Flags: review?(roc)
Attachment #162708 - Flags: review+
Status: NEW → RESOLVED
Closed: 21 years ago
Resolution: --- → FIXED
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: