Bug 253818 - Remove NS_ASSERTION from PresShell::EndLoad. r+sr=roc p=cst@andrew.cmu.edu (Chris Thomas)